Workshop | Add pg_stat_statements

--- a/.config/docker/psql/Dockerfile
+++ b/.config/docker/psql/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update
 RUN apt-get install -y postgresql-17-pgtap
 
 COPY init.sql /docker-entrypoint-initdb.d/
+COPY postgresql.conf /var/lib/postgresql/data/postgresql.conf
 
 # Expose the PostgreSQL port
 EXPOSE 5432
